--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,6 @@ dependencies {
     compile 'org.apache.commons:commons-lang3:3.0'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
     compile 'com.github.chrisbanes:PhotoView:2.0.0'
+    compile 'com.jsibbold:zoomage:1.1.0'
     testCompile 'junit:junit:4.12'
 }
