--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
     compile 'com.github.chrisbanes:PhotoView:2.0.0'
     compile 'com.jsibbold:zoomage:1.1.0'
+    compile 'com.edmodo:rangebar:1.0.0'
     testCompile 'junit:junit:4.12'
 }
