ISSUE-173: Updates to use series data

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,6 +81,28 @@
         </activity>
 
 
+        <!-- Related to series -->
+        <activity android:name="ar.com.tzulberti.archerytraining.activities.series.ViewRawDataActivity"
+            android:parentActivityName="ar.com.tzulberti.archerytraining.activities.MainActivity" >
+            <!-- The meta-data tag is required if you support API level 15 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="ar.com.tzulberti.archerytraining.activities.MainActivity" />
+        </activity>
+        <activity android:name="ar.com.tzulberti.archerytraining.activities.series.AddSerieActivity"
+            android:parentActivityName="ar.com.tzulberti.archerytraining.activities.MainActivity" >
+            <!-- The meta-data tag is required if you support API level 15 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="ar.com.tzulberti.archerytraining.activities.series.ViewRawDataActivity" />
+        </activity>
+        <activity android:name="ar.com.tzulberti.archerytraining.activities.series.ViewStatsTotalsActivity"
+            android:parentActivityName="ar.com.tzulberti.archerytraining.activities.MainActivity" >
+            <!-- The meta-data tag is required if you support API level 15 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="ar.com.tzulberti.archerytraining.activities.series.ViewRawDataActivity" />
+        </activity>
     </application>
 
 
