ISSUE-173: Added options for retentions

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -103,6 +103,22 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="ar.com.tzulberti.archerytraining.activities.series.ViewRawDataActivity" />
         </activity>
+
+        <!-- Retentions -->
+        <activity android:name="ar.com.tzulberti.archerytraining.activities.retentions.ConfigureRetentionActivity"
+            android:parentActivityName="ar.com.tzulberti.archerytraining.activities.MainActivity" >
+            <!-- The meta-data tag is required if you support API level 15 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="ar.com.tzulberti.archerytraining.activities.MainActivity" />
+        </activity>
+        <activity android:name="ar.com.tzulberti.archerytraining.activities.retentions.RetentionExerciseActivity"
+            android:parentActivityName="ar.com.tzulberti.archerytraining.activities.MainActivity" >
+            <!-- The meta-data tag is required if you support API level 15 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="ar.com.tzulberti.archerytraining.activities.retentions.ConfigureRetentionActivity" />
+        </activity>
     </application>
 
 
