--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "ar.com.tzulberti.testing"
+        applicationId "ar.com.tzulberti.archerytraining"
         minSdkVersion 16
         targetSdkVersion 25
         versionCode 6
