--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,6 @@ dependencies {
     compile 'com.jsibbold:zoomage:1.1.0'
     compile 'com.edmodo:rangebar:1.0.0'
     compile 'io.sentry:sentry-android:1.0.0'
-    testCompile 'com.amitshekhar.android:debug-db:1.0.0'
+    debugCompile 'com.amitshekhar.android:debug-db:1.0.0'
     testCompile 'junit:junit:4.12'
 }
