--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation 'com.jsibbold:zoomage:1.1.0'
     implementation 'com.edmodo:rangebar:1.0.0'
     implementation 'io.sentry:sentry-android:1.0.0'
+    implementation 'com.leavjenn.smoothdaterangepicker:library:0.2.0'
+
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.0'
     testImplementation 'junit:junit:4.12'
 }
