--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.1'
     implementation 'org.apache.commons:commons-lang3:3.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.2'
-    implementation 'com.edmodo:rangebar:1.0.0'
+    implementation 'com.appyvet:materialrangebar:1.4.2'
     implementation 'io.sentry:sentry-android:1.0.0'
     implementation 'com.leavjenn.smoothdaterangepicker:library:0.2.0'
 
