ISSUE-202: Add timer functionality

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -165,6 +165,22 @@
         <!-- Common activities -->
         <activity android:name="ar.com.tzulberti.archerytraining.activities.common.ContainerStatsActivity">
         </activity>
+
+        <!-- Timer -->
+        <activity android:name="ar.com.tzulberti.archerytraining.activities.timer.ConfigureTimerActivity"
+            android:parentActivityName="ar.com.tzulberti.archerytraining.activities.MainActivity" >
+            <!-- The meta-data tag is required if you support API level 15 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="ar.com.tzulberti.archerytraining.activities.MainActivity" />
+        </activity>
+        <activity android:name="ar.com.tzulberti.archerytraining.activities.timer.TimerActivity"
+            android:parentActivityName="ar.com.tzulberti.archerytraining.activities.MainActivity" >
+            <!-- The meta-data tag is required if you support API level 15 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="ar.com.tzulberti.archerytraining.activities.timer.ConfigureTimerActivity" />
+        </activity>
     </application>
 
 
