--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,10 +5,10 @@ android {
     buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "ar.com.tzulberti.archerytraining"
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 27
-        versionCode 12
-        versionName "0.11.0"
+        versionCode 13
+        versionName "0.12.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -24,7 +24,7 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.google.firebase:firebase-core:16.0.4'
+    implementation 'com.google.firebase:firebase-core:16.0.7'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -36,6 +36,7 @@ dependencies {
     implementation 'com.appyvet:materialrangebar:1.4.4'
     implementation 'io.sentry:sentry-android:1.7.12'
     implementation 'com.leavjenn.smoothdaterangepicker:library:0.2.0'
+    implementation 'com.itextpdf:itextg:5.5.10'
 
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.4'
     testImplementation 'junit:junit:4.12'
